# state-based-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _test.cpp  b.bat  be.bat  d.bat  defines.hpp  e.bat  editor_main.cpp  game_main.cpp  gd.bat  gr.bat  t.bat
WindowBuild/MinGW/: build.bat  editor.bat  gen-build.bat  gen-release.bat
docs/: Doxygen
examples/: CMakeLists.txt
examples/Flappy Bird/: BirdController.cpp  BirdController.hpp  CMakeLists.txt  GameController.cpp  GameController.hpp  PipeController.cpp  PipeController.hpp  ResumeButtonController.hpp  ScoreBoard.cpp  ScoreBoard.hpp  SettingButtonController.hpp  StartupSceneController.hpp  defs.hpp  game.cpp  game.hpp  game_data.cpp  game_data.hpp  main.cpp
examples/Flappy Bird/assets/configs/: config.json  resources.json
examples/Flappy Bird/bird_state/: bird_dead.hpp  bird_jump.hpp  bird_play.hpp  bird_start.hpp  bird_state.hpp  bird_state_defs.hpp
examples/Flappy Bird/game_state/: game_over.cpp  game_over.hpp  game_playing.cpp  game_playing.hpp  game_start.cpp  game_start.hpp  game_state.hpp
examples/Flappy Bird/scripts/: BirdController.cpp  CMakeLists.txt  GameController.cpp  GameStartController.cpp  PipeController.cpp  ResumeButtonController.cpp  ScoreBoard.cpp  SettingButtonController.cpp  StartupSceneController.cpp  Test.cpp
examples/Flappy Bird/scripts/game_state/: game_over.cpp  game_playing.cpp  game_start.cpp
examples/Hero/: CMakeLists.txt  bird.cpp  bird.hpp  button.cpp  button.hpp  component_defs.hpp  game.cpp  game.hpp  main.cpp
examples/MagicCard/: default_resource.json  game.nttproj  mophat.nttproj  test.nttproj  working.nttproj
examples/MagicCard/scenes/: aaaaaa.json  huang.json  startup.json  test.json  testa.json
examples/MagicCard/scripts/: Bird.cpp
examples/Solving/: test.nttproj
examples/Working/: test.nttproj
examples/WorldCraf/: test.nttproj
include/NTTEngine/: Application.hpp  IApplication.hpp  NTTEngine.hpp  defines.hpp  main.hpp  pointers.hpp
include/NTTEngine/application/: application.hpp
include/NTTEngine/audio/: AudioResource.hpp  audio.hpp
include/NTTEngine/core/: Logger.hpp  Memory.hpp  String.hpp  assertion.hpp  auto_naming.hpp  color.hpp  core.hpp  exception.hpp  formatter.hpp  logging.hpp  object.hpp  profiling.hpp  random.hpp  terminal_color.hpp  time.hpp  utils.hpp
include/NTTEngine/debugging/: debugging.hpp
include/NTTEngine/dev/: dev.hpp  store.hpp
include/NTTEngine/ecs/: component_base.hpp  data_com.hpp  ecs.hpp  ecs_helper.hpp  entity_info.hpp  layer_types.hpp  system.hpp
include/NTTEngine/editor/: OpenClosableWindow.hpp  editor.hpp  editor_clipboard.hpp  editor_log_handler.hpp  editor_system.hpp  editor_utils.hpp  types.hpp
include/NTTEngine/physics/: Collision.hpp  Mass.hpp  MassSystem.hpp  collision_system.hpp  physics.hpp  physics_dev.hpp
include/NTTEngine/renderer/: Camera.hpp  Geometry.hpp  GraphicInterface.hpp  Grid.hpp  Hovering.hpp  HoveringComponent.hpp  ImageResource.hpp  MouseHoveringSystem.hpp  Parent.hpp  ParentSystem.hpp  Raylib_GraphicAPI.hpp  RenderSystem.hpp  Sprite.hpp  Text.hpp  Texture.hpp  TextureComponent.hpp  line.hpp  renderer.hpp
include/NTTEngine/resources/: Resource.hpp  ResourceManager.hpp  resource_common.h  resources.hpp
include/NTTEngine/structures/: color.hpp  dictionary.hpp  list.hpp  position.hpp  size.hpp  sorted_list.hpp  stack.hpp  string.hpp  structures.hpp
src/: Application.cpp  Application.hpp  ApplicationImpl.cpp  ApplicationImpl.hpp  main.cpp
src/application/event_system/: event_system.cpp
src/application/hot_reload_module/: filewatch.hpp  hot_reload_module.cpp  script_resource.cpp  watch_dog.hpp
src/application/input_system/: input_system.cpp
src/application/layer_system/: layer.hpp  layer_system.cpp
src/application/scene_system/: scene_system.cpp
src/application/script_system/: defs.hpp  native_script_system.cpp  script.cpp  script_component.cpp  script_resource.cpp  script_store.cpp  scriptable.cpp  state.cpp  state_component.cpp  state_system.cpp
src/application/state_system/: state.cpp  state_system.cpp
src/audio/: AudioResource.cpp  audio.cpp  audio_info.hpp  audio_platforms.hpp
src/core/: ConsoleHandler.cpp  ConsoleHandler.hpp  Handler.cpp  Handler.hpp  LogMessage.hpp  Logger.cpp  Logger.hpp  LoggerImpl.cpp  LoggerImpl.hpp  String.cpp  memory.cpp  object.cpp  profiling.cpp  random.cpp  time.cpp
src/core/auto_naming/: auto_naming.cpp
src/core/formatter/: formatter.cpp
src/core/history/: history_manager.cpp
src/core/logging/: LogMessage.hpp  Logger.cpp  Logger.hpp  logging.cpp
src/core/parser/: json.cpp
src/debugging/: debugging.cpp
src/dev/: store.cpp  store_conf_t.hpp
src/dev/__tests__/: store_test.cpp
src/ecs/: ecs.cpp  ecs_helper.cpp  entity_info.cpp  system.cpp
src/editor/: editor.cpp  editor_clipboard.cpp  editor_config.cpp  editor_entity_window.cpp  editor_handler.cpp  editor_log_window.cpp  editor_log_window.hpp  editor_scene_window.cpp  editor_system.cpp  editor_tool.cpp  editor_tool.hpp  editor_utils.cpp  editor_viewport_window.cpp  editor_viewport_window.hpp  project_info.cpp  scene_info.cpp  types.hpp
src/physics/: Collision.cpp  Mass.cpp  MassSystem.cpp  collision_system.cpp
src/renderer/: Fake_GraphicAPI.cpp  Fake_GraphicAPI.hpp  Geometry.cpp  GraphicAPI.hpp  GraphicInterface.cpp  GraphicInterface_platforms.hpp  GraphicInterface_raylib.cpp  Grid.cpp  Hovering.cpp  ImageResource.cpp  MouseHoveringSystem.cpp  ParentSystem.cpp  Raylib_GraphicAPI.cpp  Raylib_GraphicAPI.hpp  RenderSystem.cpp  Sprite.cpp  SpriteSystem.cpp  TextRenderSystem.cpp  TextureComponent.cpp  camera.cpp  line.cpp
src/resource/: Resource.cpp  ResourceManager.cpp  ResourceTest.cpp  ResourceTest.hpp  resource_common.cpp
src/structures/: color.cpp  dictionary.cpp  list.cpp  position.cpp  size.cpp  sorted_list.cpp  string.cpp
test/core/: Logger_test.cpp
vendors/: CMakeLists.txt
vendors/boost/: CMakeLists.txt
vendors/imgui-raylib/: CMakeLists.txt
vendors/imgui-raylib/include/: ImGuiFileDialog.h  rlImGui.h
vendors/imgui-raylib/src/: rlImGui.cpp
(+131 files in other folders)
